# wordpress-mcp-xmlrpc

./: README.md  pyproject.toml  server.py
src/wordpress_mcp_xmlrpc/: server.py
