[project]
name = "wordpress-mcp-xmlrpc"
version = "0.1.0"
description = "MCP server for WordPress via XML-RPC API"
requires-python = ">=3.11"
dependencies = ["fastmcp"]

[project.scripts]
wordpress-mcp-xmlrpc = "wordpress_mcp_xmlrpc.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
